--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <nav class="vbt-grid">
     <!-- קישור למונחים → החליפי ל-URL שלך במידת הצורך -->
-    <a class="vbt-card terms" href="https://kereneis-boop.github.io/rabbi-sacks/Terms1.html" target="_self" aria-label="פתיחת דף המונחים">
+    <a class="vbt-card terms" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_1.3.html" target="_self" aria-label="פתיחת דף המונחים">
       <div class="row">
         <span class="icon">📚</span>
         <span class="title">מונחים</span>
@@ -48,6 +48,18 @@
       <div class="desc">רשימת מושגים עם אנימציית פתיחה/סגירה, צבעונית ונוחה לקריאה.</div>
       <span class="chev">›</span>
     </a>
+
+      <nav class="vbt-grid">
+    <!-- קישור למונחים → החליפי ל-URL שלך במידת הצורך -->
+    <a class="vbt-card terms" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_1.7.html" target="_self" aria-label="פתיחת דף המונחים">
+      <div class="row">
+        <span class="icon">📚</span>
+        <span class="title">מונחים</span>
+      </div>
+      <div class="desc">רשימת מושגים עם אנימציית פתיחה/סגירה, צבעונית ונוחה לקריאה.</div>
+      <span class="chev">›</span>
+    </a>
+
 
     <!-- קישור למפת חשיבה → החליפי ל-URL שלך במידת הצורך -->
     <a class="vbt-card mind" href="https://kereneis-boop.github.io/rabbi-sacks/mindmap-full.html" target="_self" aria-label="פתיחת דף מפת החשיבה">
