--- a/Terms_5.9.html
+++ b/Terms_5.9.html
@@ -1,1 +1,92 @@
+<!-- MOODLE SAFE (no <script>) -->
+<!-- הדביקי את כל הבלוק לדף "תוכן מעוצב". אין CSS/JS חיצוני; הכל בתוך הבלוק. -->
+
+<style>
+  /* הכל ממוסגר בתוך .vbt-terms כדי למנוע זליגה לשאר הדף */
+  .vbt-terms * { box-sizing: border-box; }
+
+  /* קופסאות אקורדיון – גרסת checkbox כדי לאפשר אנימציה גם בסגירה */
+  .vbt-terms .vbt-acc { position: relative; border-radius: 18px; padding: 0; background: transparent; }
+  .vbt-terms .vbt-toggle { position: absolute; inset: 0; opacity: 0; pointer-events: none; }
+
+  .vbt-terms .vbt-summary {
+    display: flex; align-items: center; gap: 12px; direction: rtl; cursor: pointer;
+    padding: 14px 18px; border-radius: 40px; background: #F8E8FF; font-weight: 800; font-size: 18px;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,.6), inset 0 0 0 1px rgba(0,0,0,.04);
+    list-style: none; outline: none; transition: box-shadow .35s ease, transform .2s ease;
+  }
+  .vbt-terms .vbt-summary:hover { transform: translateY(-1px); }
+  .vbt-terms .vbt-summary:focus-visible { outline: 2px solid #fe0100; outline-offset: 2px; }
+
+  /* מצב פתוח – צל מעט חזק יותר */
+  .vbt-terms .vbt-toggle:checked + .vbt-summary {
+    box-shadow: 0 6px 16px rgba(0,0,0,.06), inset 0 1px 0 rgba(255,255,255,.6), inset 0 0 0 1px rgba(0,0,0,.04);
+  }
+
+  /* אייקון שמסתובב בפתיחה/בסגירה */
+  .vbt-terms .vbt-icon {
+    width: 28px; height: 28px; border-radius: 50%; background: #fe0100; color: #fff; display: grid;
+    place-items: center; font-weight: 900; transition: transform .35s ease;
+  }
+  .vbt-terms .vbt-toggle:checked + .vbt-summary .vbt-icon { transform: rotate(180deg); }
+
+  /* פנל תוכן – פייד אין/אאוט מלא + גלישה חלקה בגובה */
+  .vbt-terms .vbt-panel {
+    margin-top: 10px; background: #D7F6E4; border-radius: 14px; padding: 0 16px; line-height: 1.55;
+    max-height: 0; overflow: hidden; opacity: 0; transform: translateY(-6px);
+    transition: max-height .5s ease, opacity .45s ease, transform .45s ease, padding .45s ease;
+  }
+  .vbt-terms .vbt-toggle:checked ~ .vbt-panel {
+    padding: 16px; opacity: 1; transform: translateY(0); max-height: 1200px; /* מספיק לרוב התכנים */
+  }
+
+  /* גריד רספונסיבי */
+  .vbt-terms .vbt-grid {
+    display: grid; grid-template-columns: 1fr; gap: 18px; max-width: 1000px; margin: 0 auto;
+  }
+
+  /* מסך רחב: תמיד שתי עמודות בדיוק */
+  @media (min-width: 700px) {
+    .vbt-terms .vbt-grid { grid-template-columns: repeat(2, minmax(0,1fr)); }
+  }
+
+  /* העדפת נגישות – פחות תנועה */
+  @media (prefers-reduced-motion: reduce) {
+    .vbt-terms .vbt-panel, .vbt-terms .vbt-icon, .vbt-terms .vbt-summary { transition: none; }
+  }
+</style>
+
+<div class="vbt-terms" dir="rtl" style="max-width:1120px;margin:0 auto;font-family: Alef,-apple-system,'Segoe UI',Arial,sans-serif;color:#0f172a;">
+
+  <!-- גריד רספונסיבי -->
+  <div class="vbt-grid">
+
+    <!-- ===== בית הלורדים ===== -->
+    <div class="vbt-acc">
+      <input class="vbt-toggle" type="checkbox" id="vbt-t1" />
+      <label class="vbt-summary" for="vbt-t1" role="button" tabindex="0">
+        <span class="vbt-icon">i</span>
+        <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">בית הלורדים</span>
+      </label>
+      <div class="vbt-panel">
+        בית הלורדים: בית הלורדים הוא הבית העליון של הפרלמנט הבריטי, לצד בית הנבחרים. תפקידו העיקרי הוא לבחון מחדש חקיקה שמתקבלת בבית הנבחרים, ליזום דיונים בעניינים לאומיים ובינלאומיים, ולספק מומחיות וייעוץ בלתי תלוי. חברי בית הלורדים אינם נבחרים בבחירות כלליות אלא מתמנים בדרכים שונות:ויש בהם שנבחרים על פי תפקידם הרוחני. הרב זקס היה הרב הראשי השני של אנגליה שהיה חלק מבית הלורדים והפך שם לדמות משמעותית ומשפיעה.
+      </div>
+    </div>
+
+    <!-- ===== ברית ===== -->
+    <div class="vbt-acc">
+      <input class="vbt-toggle" type="checkbox" id="vbt-t2" />
+      <label class="vbt-summary" for="vbt-t2" role="button" tabindex="0">
+        <span class="vbt-icon">i</span>
+        <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">ברית</span>
+      </label>
+      <div class="vbt-panel">
+        ברית: פילוסופיית הברית של הרב זקס מציבה את הברית כעקרון יסוד ביהדות, השונה מהותית מחוזה, שכן היא מבוססת על מחויבות מוסרית וזהות משותפת ולא על אינטרסים הדדיים. הברית יוצרת חברה שבה האחריות מתפרסת בין חבריה ולא ריכוזית, תוך דיאלוג ושיתוף פעולה. היא מגדירה לא רק את היחס בין האדם לאלוהים, אלא גם את המחויבות הקהילתית והחברתית, ומובילה לתפיסת תיקון עולם החורגת מגבולות העם היהודי לכלל האנושות.
+      </div>
+    </div>
+
+    </div>
+
+  </div>
+</div>
 
