--- a/index.html
+++ b/index.html
@@ -39,35 +39,153 @@
   <p class="sub">בחרי רכיב לפתיחה. אפשר להחליף קישורים ל־GitHub Pages או לקבצים מקומיים במודל.</p>
 
   <nav class="vbt-grid">
-    <!-- קישור למונחים → החליפי ל-URL שלך במידת הצורך -->
-    <a class="vbt-card terms" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_1.3.html" target="_self" aria-label="פתיחת דף המונחים">
-      <div class="row">
-        <span class="icon">📚</span>
-        <span class="title">מונחים</span>
-      </div>
-      <div class="desc">רשימת מושגים עם אנימציית פתיחה/סגירה, צבעונית ונוחה לקריאה.</div>
-      <span class="chev">›</span>
-    </a>
-
-      <nav class="vbt-grid">
-    <!-- קישור למונחים → החליפי ל-URL שלך במידת הצורך -->
-    <a class="vbt-card terms" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_1.7.html" target="_self" aria-label="פתיחת דף המונחים">
-      <div class="row">
-        <span class="icon">📚</span>
-        <span class="title">מונחים</span>
-      </div>
-      <div class="desc">רשימת מושגים עם אנימציית פתיחה/סגירה, צבעונית ונוחה לקריאה.</div>
-      <span class="chev">›</span>
-    </a>
-
-
-    <!-- קישור למפת חשיבה → החליפי ל-URL שלך במידת הצורך -->
-    <a class="vbt-card mind" href="https://kereneis-boop.github.io/rabbi-sacks/mindmap-full.html" target="_self" aria-label="פתיחת דף מפת החשיבה">
+    <!-- מפת הקורס -->
+    <a class="vbt-card mind" href="https://kereneis-boop.github.io/rabbi-sacks/mindmap-full.html" target="_blank" rel="noopener" aria-label="פתיחת מפת הקורס בטאב חדש">
       <div class="row">
         <span class="icon">🧠</span>
-        <span class="title">מפת חשיבה</span>
+        <span class="title">מפת הקורס</span>
       </div>
-      <div class="desc">מפה אינטראקטיבית/מוטמעת המציגה את מבנה הנושא או הקורס.</div>
+      <div class="desc">מפה אינטראקטיבית המציגה את מבנה הקורס. נפתח בטאב חדש.</div>
+      <span class="chev">›</span>
+    </a>
+
+    <!-- רכיב 1.3 · גילה זקס -->
+    <a class="vbt-card terms" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_1.3.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 1.3: גילה זקס, בטאב חדש">
+      <div class="row">
+        <span class="icon">📚</span>
+        <span class="title">רכיב 1.3 · גילה זקס</span>
+      </div>
+      <div class="desc">דף מונחים של רכיב 1.3 – גילה זקס. נפתח בטאב חדש.</div>
+      <span class="chev">›</span>
+    </a>
+
+    <!-- רכיב 1.7 · דיין בינשטוק -->
+    <a class="vbt-card terms" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_1.7.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 1.7: דיין בינשטוק, בטאב חדש">
+      <div class="row">
+        <span class="icon">📚</span>
+        <span class="title">רכיב 1.7 · דיין בינשטוק</span>
+      </div>
+      <div class="desc">דף מונחים של רכיב 1.7 – דיין בינשטוק. נפתח בטאב חדש.</div>
+      <span class="chev">›</span>
+    </a>
+
+    <!-- רכיב 2.3 · חנוך בן פזי -->
+    <a class="vbt-card terms" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_2.3.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 2.3: חנוך בן פזי, בטאב חדש">
+      <div class="row">
+        <span class="icon">📚</span>
+        <span class="title">רכיב 2.3 · חנוך בן פזי</span>
+      </div>
+      <div class="desc">דף מונחים של רכיב 2.3 – חנוך בן פזי. נפתח בטאב חדש.</div>
+      <span class="chev">›</span>
+    </a>
+
+    <!-- רכיב 2.8 · חנוך בן פזי -->
+    <a class="vbt-card terms" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_2.8.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 2.8: חנוך בן פזי, בטאב חדש">
+      <div class="row">
+        <span class="icon">📚</span>
+        <span class="title">רכיב 2.8 · חנוך בן פזי</span>
+      </div>
+      <div class="desc">דף מונחים של רכיב 2.8 – חנוך בן פזי. נפתח בטאב חדש.</div>
+      <span class="chev">›</span>
+    </a>
+
+    <!-- רכיב 3.3 · חנוך בן פזי -->
+    <a class="vbt-card terms" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_3.3.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 3.3: חנוך בן פזי, בטאב חדש">
+      <div class="row">
+        <span class="icon">📚</span>
+        <span class="title">רכיב 3.3 · חנוך בן פזי</span>
+      </div>
+      <div class="desc">דף מונחים של רכיב 3.3 – חנוך בן פזי. נפתח בטאב חדש.</div>
+      <span class="chev">›</span>
+    </a>
+
+    <!-- רכיב 3.6 · חנוך בן פזי -->
+    <a class="vbt-card terms" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_3.6.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 3.6: חנוך בן פזי, בטאב חדש">
+      <div class="row">
+        <span class="icon">📚</span>
+        <span class="title">רכיב 3.6 · חנוך בן פזי</span>
+      </div>
+      <div class="desc">דף מונחים של רכיב 3.6 – חנוך בן פזי. נפתח בטאב חדש.</div>
+      <span class="chev">›</span>
+    </a>
+
+    <!-- רכיב 4.3 · חנוך בן פזי -->
+    <a class="vbt-card terms" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_4.3.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 4.3: חנוך בן פזי, בטאב חדש">
+      <div class="row">
+        <span class="icon">📚</span>
+        <span class="title">רכיב 4.3 · חנוך בן פזי</span>
+      </div>
+      <div class="desc">דף מונחים של רכיב 4.3 – חנוך בן פזי. נפתח בטאב חדש.</div>
+      <span class="chev">›</span>
+    </a>
+
+    <!-- רכיב 4.6 · חנוך בן פזי -->
+    <a class="vbt-card terms" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_4.6.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 4.6: חנוך בן פזי, בטאב חדש">
+      <div class="row">
+        <span class="icon">📚</span>
+        <span class="title">רכיב 4.6 · חנוך בן פזי</span>
+      </div>
+      <div class="desc">דף מונחים של רכיב 4.6 – חנוך בן פזי. נפתח בטאב חדש.</div>
+      <span class="chev">›</span>
+    </a>
+
+    <!-- רכיב 4.13 · חנוך בן פזי -->
+    <a class="vbt-card terms" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_4.13.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 4.13: חנוך בן פזי, בטאב חדש">
+      <div class="row">
+        <span class="icon">📚</span>
+        <span class="title">רכיב 4.13 · חנוך בן פזי</span>
+      </div>
+      <div class="desc">דף מונחים של רכיב 4.13 – חנוך בן פזי. נפתח בטאב חדש.</div>
+      <span class="chev">›</span>
+    </a>
+
+    <!-- רכיב 5.6 · חנוך בן פזי -->
+    <a class="vbt-card terms" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_5.6.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 5.6: חנוך בן פזי, בטאב חדש">
+      <div class="row">
+        <span class="icon">📚</span>
+        <span class="title">רכיב 5.6 · חנוך בן פזי</span>
+      </div>
+      <div class="desc">דף מונחים של רכיב 5.6 – חנוך בן פזי. נפתח בטאב חדש.</div>
+      <span class="chev">›</span>
+    </a>
+
+    <!-- רכיב 5.9 · חנוך בן פזי -->
+    <a class="vbt-card terms" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_5.9.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 5.9: חנוך בן פזי, בטאב חדש">
+      <div class="row">
+        <span class="icon">📚</span>
+        <span class="title">רכיב 5.9 · חנוך בן פזי</span>
+      </div>
+      <div class="desc">דף מונחים של רכיב 5.9 – חנוך בן פזי. נפתח בטאב חדש.</div>
+      <span class="chev">›</span>
+    </a>
+
+    <!-- רכיב 6.3 · חנוך בן פזי -->
+    <a class="vbt-card terms" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_6.3.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 6.3: חנוך בן פזי, בטאב חדש">
+      <div class="row">
+        <span class="icon">📚</span>
+        <span class="title">רכיב 6.3 · חנוך בן פזי</span>
+      </div>
+      <div class="desc">דף מונחים של רכיב 6.3 – חנוך בן פזי. נפתח בטאב חדש.</div>
+      <span class="chev">›</span>
+    </a>
+
+    <!-- רכיב 6.8 · חנוך בן פזי -->
+    <a class="vbt-card terms" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_6.8.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 6.8: חנוך בן פזי, בטאב חדש">
+      <div class="row">
+        <span class="icon">📚</span>
+        <span class="title">רכיב 6.8 · חנוך בן פזי</span>
+      </div>
+      <div class="desc">דף מונחים של רכיב 6.8 – חנוך בן פזי. נפתח בטאב חדש.</div>
+      <span class="chev">›</span>
+    </a>
+
+    <!-- רכיב 6.11 · חנוך בן פזי -->
+    <a class="vbt-card terms" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_6.11.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 6.11: חנוך בן פזי, בטאב חדש">
+      <div class="row">
+        <span class="icon">📚</span>
+        <span class="title">רכיב 6.11 · חנוך בן פזי</span>
+      </div>
+      <div class="desc">דף מונחים של רכיב 6.11 – חנוך בן פזי. נפתח בטאב חדש.</div>
       <span class="chev">›</span>
     </a>
   </nav>
