--- a/Terms_1.3.html
+++ b/Terms_1.3.html
@@ -1,83 +1,149 @@
-<!-- MOODLE SAFE (no <script>) -->
-<!-- הדביקי את כל הבלוק לדף "תוכן מעוצב". אין CSS/JS חיצוני; הכל בתוך הבלוק. -->
+<!doctype html>
+<html lang="he" dir="rtl">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Terms_1.3 – Rabbi Sacks (Auto‑Resize)</title>
+  <style>
+    /* איפוס עדין */
+    html, body { margin: 0; }
+    .vbt-terms * { box-sizing: border-box; }
 
-<style>
-  /* הכל ממוסגר בתוך .vbt-terms כדי למנוע זליגה לשאר הדף */
-  .vbt-terms * { box-sizing: border-box; }
+    /* קופסאות אקורדיון – גרסת checkbox כדי לאפשר אנימציה גם בסגירה */
+    .vbt-terms .vbt-acc { position: relative; border-radius: 18px; padding: 0; background: transparent; }
+    .vbt-terms .vbt-toggle { position: absolute; inset: 0; opacity: 0; pointer-events: none; }
 
-  /* קופסאות אקורדיון – גרסת checkbox כדי לאפשר אנימציה גם בסגירה */
-  .vbt-terms .vbt-acc { position: relative; border-radius: 18px; padding: 0; background: transparent; }
-  .vbt-terms .vbt-toggle { position: absolute; inset: 0; opacity: 0; pointer-events: none; }
+    .vbt-terms .vbt-summary {
+      display: flex; align-items: center; gap: 12px; direction: rtl; cursor: pointer;
+      padding: 14px 18px; border-radius: 40px; background: #F8E8FF; font-weight: 800; font-size: 18px;
+      box-shadow: inset 0 1px 0 rgba(255,255,255,.6), inset 0 0 0 1px rgba(0,0,0,.04);
+      list-style: none; outline: none; transition: box-shadow .35s ease, transform .2s ease;
+    }
+    .vbt-terms .vbt-summary:hover { transform: translateY(-1px); }
+    .vbt-terms .vbt-summary:focus-visible { outline: 2px solid #fe0100; outline-offset: 2px; }
 
-  .vbt-terms .vbt-summary {
-    display: flex; align-items: center; gap: 12px; direction: rtl; cursor: pointer;
-    padding: 14px 18px; border-radius: 40px; background: #F8E8FF; font-weight: 800; font-size: 18px;
-    box-shadow: inset 0 1px 0 rgba(255,255,255,.6), inset 0 0 0 1px rgba(0,0,0,.04);
-    list-style: none; outline: none; transition: box-shadow .35s ease, transform .2s ease;
-  }
-  .vbt-terms .vbt-summary:hover { transform: translateY(-1px); }
-  .vbt-terms .vbt-summary:focus-visible { outline: 2px solid #fe0100; outline-offset: 2px; }
+    /* מצב פתוח – צל מעט חזק יותר */
+    .vbt-terms .vbt-toggle:checked + .vbt-summary {
+      box-shadow: 0 6px 16px rgba(0,0,0,.06), inset 0 1px 0 rgba(255,255,255,.6), inset 0 0 0 1px rgba(0,0,0,.04);
+    }
 
-  /* מצב פתוח – צל מעט חזק יותר */
-  .vbt-terms .vbt-toggle:checked + .vbt-summary {
-    box-shadow: 0 6px 16px rgba(0,0,0,.06), inset 0 1px 0 rgba(255,255,255,.6), inset 0 0 0 1px rgba(0,0,0,.04);
-  }
+    /* אייקון שמסתובב בפתיחה/בסגירה */
+    .vbt-terms .vbt-icon {
+      width: 28px; height: 28px; border-radius: 50%; background: #fe0100; color: #fff; display: grid;
+      place-items: center; font-weight: 900; transition: transform .35s ease;
+    }
+    .vbt-terms .vbt-toggle:checked + .vbt-summary .vbt-icon { transform: rotate(180deg); }
 
-  /* אייקון שמסתובב בפתיחה/בסגירה */
-  .vbt-terms .vbt-icon {
-    width: 28px; height: 28px; border-radius: 50%; background: #fe0100; color: #fff; display: grid;
-    place-items: center; font-weight: 900; transition: transform .35s ease;
-  }
-  .vbt-terms .vbt-toggle:checked + .vbt-summary .vbt-icon { transform: rotate(180deg); }
+    /* פנל תוכן – פייד אין/אאוט + גלישה חלקה בגובה (max-height גדול כדי למנוע גלילה פנימית) */
+    .vbt-terms .vbt-panel {
+      margin-top: 10px; background: #D7F6E4; border-radius: 14px; padding: 0 16px; line-height: 1.55;
+      max-height: 0; overflow: hidden; opacity: 0; transform: translateY(-6px);
+      transition: max-height .5s ease, opacity .45s ease, transform .45s ease, padding .45s ease;
+    }
+    .vbt-terms .vbt-toggle:checked ~ .vbt-panel {
+      padding: 16px; opacity: 1; transform: translateY(0); max-height: 4000px; /* גדול מספיק – בלי גלילה פנימית */
+    }
 
-  /* פנל תוכן – פייד אין/אאוט מלא + גלישה חלקה בגובה */
-  .vbt-terms .vbt-panel {
-    margin-top: 10px; background: #D7F6E4; border-radius: 14px; padding: 0 16px; line-height: 1.55;
-    max-height: 0; overflow: hidden; opacity: 0; transform: translateY(-6px);
-    transition: max-height .5s ease, opacity .45s ease, transform .45s ease, padding .45s ease;
-  }
-  .vbt-terms .vbt-toggle:checked ~ .vbt-panel {
-    padding: 16px; opacity: 1; transform: translateY(0); max-height: 1200px; /* מספיק לרוב התכנים */
-  }
+    /* גריד: מובייל עמודה אחת, מסך רחב שתי עמודות קבועות */
+    .vbt-terms .vbt-grid {
+      display: grid; grid-template-columns: 1fr; gap: 18px; max-width: 1000px; margin: 0 auto;
+    }
+    @media (min-width: 700px) {
+      .vbt-terms .vbt-grid { grid-template-columns: repeat(2, minmax(0,1fr)); }
+    }
 
-  /* גריד רספונסיבי */
-  .vbt-terms .vbt-grid {
-    display: grid; grid-template-columns: repeat(auto-fit, minmax(320px,1fr)); gap: 18px; max-width: 1000px; margin: 0 auto;
-  }
+    /* העדפת נגישות – פחות תנועה */
+    @media (prefers-reduced-motion: reduce) {
+      .vbt-terms .vbt-panel, .vbt-terms .vbt-icon, .vbt-terms .vbt-summary { transition: none; }
+    }
+  </style>
+</head>
+<body>
+  <div class="vbt-terms" dir="rtl" style="max-width:1120px;margin:0 auto;font-family: Alef,-apple-system,'Segoe UI',Arial,sans-serif;color:#0f172a;">
+    <div class="vbt-grid">
 
-  /* העדפת נגישות – פחות תנועה */
-  @media (prefers-reduced-motion: reduce) {
-    .vbt-terms .vbt-panel, .vbt-terms .vbt-icon, .vbt-terms .vbt-summary { transition: none; }
-  }
-</style>
-
-<div class="vbt-terms" dir="rtl" style="max-width:1120px;margin:0 auto;font-family: Alef,-apple-system,'Segoe UI',Arial,sans-serif;color:#0f172a;">
-
-  <!-- גריד רספונסיבי -->
-  <div class="vbt-grid">
-
-    <!-- ===== פריט 1 ===== -->
-    <div class="vbt-acc">
-      <input class="vbt-toggle" type="checkbox" id="vbt-t1" />
-      <label class="vbt-summary" for="vbt-t1" role="button" tabindex="0">
-        <span class="vbt-icon">i</span>
-        <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">הרב סולובייצ'יק</span>
-      </label>
-      <div class="vbt-panel">
-        הרב יוסף דב סולובייצ'יק היה מההוגים היהודיים המשפיעים ביותר במאה העשרים, יצר סינתזה ייחודית בין המסורת היהודית לפילוסופיה המערבית. הוא פיתח את דמות "איש ההלכה" המשלבת בין עולם המסורת לעולם המודרני, וטבע את המושג "קהילת הברית" המדגיש את האחריות ההדדית בקהילה היהודית. השפעתו על הרב זקס ניכרת בניסיון המתמיד לגשר בין המסורת למודרנה, בחשיבות הקהילה, ובחתירה למצוא משמעות יהודית עמוקה לאתגרי הזמן.
+      <!-- ===== תורה ומדע ===== -->
+      <div class="vbt-acc">
+        <input class="vbt-toggle" type="checkbox" id="vbt-t1" />
+        <label class="vbt-summary" for="vbt-t1" role="button" tabindex="0">
+          <span class="vbt-icon">i</span>
+          <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">תורה ומדע</span>
+        </label>
+        <div class="vbt-panel">
+          תורה ומדע: השילוב בין חכמת התורה לבין הידע הכללי, מתוך תפיסה שהאמונה היהודית אינה עומדת בניגוד לחקר העולם, אלא יכולה להעשיר אותו.
+        </div>
       </div>
-    </div>
 
-    <!-- ===== פריט 2 ===== -->
-    <div class="vbt-acc">
-      <input class="vbt-toggle" type="checkbox" id="vbt-t2" />
-      <label class="vbt-summary" for="vbt-t2" role="button" tabindex="0">
-        <span class="vbt-icon">i</span>
-        <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">הרבי מלובביץ'</span>
-      </label>
-      <div class="vbt-panel">
-        המנהיג השביעי והאחרון של חסידות חב"ד, היה מגדולי ההוגים והמנהיגים היהודיים במאה העשרים, שהיה ידוע בהשכלתו הרחבה הן בתורה והן במדעים. הוא היווה השראה לרב זקס בראייתו את האפשרות לשלב בין יהדות מסורתית למעורבות מלאה בעולם המודרני, ובמנהיגותו ששילבה בין נאמנות עמוקה למסורת היהודית לבין פתיחות ואחריות כלפי כלל האנושות.
+      <!-- ===== מחלוקת לשם שמיים ===== -->
+      <div class="vbt-acc">
+        <input class="vbt-toggle" type="checkbox" id="vbt-t2" />
+        <label class="vbt-summary" for="vbt-t2" role="button" tabindex="0">
+          <span class="vbt-icon">i</span>
+          <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">מחלוקת לשם שמיים</span>
+        </label>
+        <div class="vbt-panel">
+          מחלוקת לשם שמיים: תפיסת המחלוקת ככוח בונה, ולא הורס, כאשר היא נעשית מתוך כוונה טהורה לברר את האמת ולא מתוך אינטרסים אישיים.
+        </div>
       </div>
+
+      <!-- ===== מנהיגות יוצרת מנהיגים ===== -->
+      <div class="vbt-acc">
+        <input class="vbt-toggle" type="checkbox" id="vbt-t3" />
+        <label class="vbt-summary" for="vbt-t3" role="button" tabindex="0">
+          <span class="vbt-icon">i</span>
+          <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">מנהיגות יוצרת מנהיגים</span>
+        </label>
+        <div class="vbt-panel">
+          מנהיגות יוצרת מנהיגים: רעיונו של הרב זקס שלפיו מנהיג אמיתי אינו מסתפק בצבירת עוקבים, אלא מטפח אנשים שימשיכו להנהיג ולחדש.
+        </div>
+      </div>
+
+      <!-- ===== ברית וקהילה ===== -->
+      <div class="vbt-acc">
+        <input class="vbt-toggle" type="checkbox" id="vbt-t4" />
+        <label class="vbt-summary" for="vbt-t4" role="button" tabindex="0">
+          <span class="vbt-icon">i</span>
+          <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">ברית וקהילה</span>
+        </label>
+        <div class="vbt-panel">
+           ברית וקהילה: ההבנה שהיהדות אינה מבוססת רק על חוקים ומצוות, אלא גם על ברית בין אנשים ויצירת קהילה מוסרית שמחויבת לערכים משותפים.
+        </div>
+      </div>
+
     </div>
   </div>
-</div>
+
+  <!-- Auto‑Resize: שליחת גובה להורה (Moodle) כדי למנוע גלילה פנימית ב-iframe) -->
+  <script>
+  (function () {
+    function sendHeight() {
+      var h = Math.max(
+        document.documentElement.scrollHeight,
+        document.body.scrollHeight,
+        document.documentElement.offsetHeight,
+        document.body.offsetHeight
+      );
+      parent.postMessage({ type: 'termsHeight', height: h }, '*');
+    }
+
+    var ro;
+    if ('ResizeObserver' in window) {
+      ro = new ResizeObserver(sendHeight);
+      ro.observe(document.documentElement);
+      ro.observe(document.body);
+      var root = document.querySelector('.vbt-terms');
+      if (root) ro.observe(root);
+    }
+
+    var fire = function(){ requestAnimationFrame(sendHeight); };
+    window.addEventListener('DOMContentLoaded', fire);
+    window.addEventListener('load', fire);
+    window.addEventListener('transitionend', fire, true);
+    window.addEventListener('click', function(){ setTimeout(sendHeight, 200); }, true);
+    setInterval(sendHeight, 800);
+  })();
+  </script>
+
+  <!-- הערת הטמעה להורה (Moodle): ודאי להאזין ל-postMessage ולעדכן את גובה ה-iframe בהתאם. ה-snippet כבר נתתי לך בהודעה הקודמת. -->
+</body>
+</html>
