--- a/Terms_1.3.html
+++ b/Terms_1.3.html
@@ -5,11 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Terms_1.3 – Rabbi Sacks</title>
   <style>
-    /* איפוס עדין */
     html, body { margin: 0; }
     .vbt-terms * { box-sizing: border-box; }
 
-    /* קופסאות אקורדיון – גרסת checkbox כדי לאפשר אנימציה גם בסגירה */
+    /* אקורדיון (checkbox) */
     .vbt-terms .vbt-acc { position: relative; border-radius: 18px; padding: 0; background: transparent; }
     .vbt-terms .vbt-toggle { position: absolute; inset: 0; opacity: 0; pointer-events: none; }
 
@@ -21,63 +20,35 @@
     }
     .vbt-terms .vbt-summary:hover { transform: translateY(-1px); }
     .vbt-terms .vbt-summary:focus-visible { outline: 2px solid #fe0100; outline-offset: 2px; }
+    .vbt-terms .vbt-toggle:checked + .vbt-summary { box-shadow: 0 6px 16px rgba(0,0,0,.06), inset 0 1px 0 rgba(255,255,255,.6), inset 0 0 0 1px rgba(0,0,0,.04); }
 
-    /* מצב פתוח – צל מעט חזק יותר */
-    .vbt-terms .vbt-toggle:checked + .vbt-summary {
-      box-shadow: 0 6px 16px rgba(0,0,0,.06), inset 0 1px 0 rgba(255,255,255,.6), inset 0 0 0 1px rgba(0,0,0,.04);
-    }
-
-    /* אייקון שמסתובב בפתיחה/בסגירה */
     .vbt-terms .vbt-icon {
       width: 28px; height: 28px; border-radius: 50%; background: #fe0100; color: #fff; display: grid;
       place-items: center; font-weight: 900; transition: transform .35s ease;
     }
     .vbt-terms .vbt-toggle:checked + .vbt-summary .vbt-icon { transform: rotate(180deg); }
 
-    /* פנל תוכן – פייד אין/אאוט + גלישה חלקה בגובה (max-height גדול כדי למנוע גלילה פנימית) */
     .vbt-terms .vbt-panel {
       margin-top: 10px; background: #D7F6E4; border-radius: 14px; padding: 0 16px; line-height: 1.55;
       max-height: 0; overflow: hidden; opacity: 0; transform: translateY(-6px);
       transition: max-height .5s ease, opacity .45s ease, transform .45s ease, padding .45s ease;
     }
-    .vbt-terms .vbt-toggle:checked ~ .vbt-panel {
-      padding: 16px; opacity: 1; transform: translateY(0); max-height: 4000px; /* גדול מספיק – בלי גלילה פנימית */
-    }
+    .vbt-terms .vbt-toggle:checked ~ .vbt-panel { padding: 16px; opacity: 1; transform: translateY(0); max-height: 4000px; }
 
-    /* גריד: מובייל עמודה אחת, מסך רחב שתי עמודות קבועות */
-    .vbt-terms .vbt-grid {
-      display: grid; grid-template-columns: 1fr; gap: 18px; max-width: 1000px; margin: 0 auto;
-    }
-    @media (min-width: 700px) {
-      .vbt-terms .vbt-grid { grid-template-columns: repeat(2, minmax(0,1fr)); }
-    }
+    .vbt-terms .vbt-grid { display: grid; grid-template-columns: 1fr; gap: 18px; max-width: 1000px; margin: 0 auto; }
+    @media (min-width: 700px) { .vbt-terms .vbt-grid { grid-template-columns: repeat(2, minmax(0,1fr)); } }
 
-    /* העדפת נגישות – פחות תנועה */
-    @media (prefers-reduced-motion: reduce) {
-      .vbt-terms .vbt-panel, .vbt-terms .vbt-icon, .vbt-terms .vbt-summary { transition: none; }
-    }
+    @media (prefers-reduced-motion: reduce) { .vbt-terms .vbt-panel, .vbt-terms .vbt-icon, .vbt-terms .vbt-summary { transition: none; } }
   </style>
 </head>
 <body>
   <div class="vbt-terms" dir="rtl" style="max-width:1120px;margin:0 auto;font-family: Alef,-apple-system,'Segoe UI',Arial,sans-serif;color:#0f172a;">
     <div class="vbt-grid">
 
-      <!-- ===== הרב סולובייצ'יק ===== -->
+      <!-- ===== הרבי מלובביץ' ===== -->
       <div class="vbt-acc">
         <input class="vbt-toggle" type="checkbox" id="vbt-t1" />
         <label class="vbt-summary" for="vbt-t1" role="button" tabindex="0">
-          <span class="vbt-icon">i</span>
-          <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">הרב סולובייצ'יק</span>
-        </label>
-        <div class="vbt-panel">
-          הרב יוסף דב סולובייצ'יק היה מההוגים היהודיים המשפיעים ביותר במאה העשרים, יצר סינתזה ייחודית בין המסורת היהודית לפילוסופיה המערבית. הוא פיתח את דמות "איש ההלכה" המשלבת בין עולם המסורת לעולם המודרני, וטבע את המושג "קהילת הברית" המדגיש את האחריות ההדדית בקהילה היהודית. השפעתו על הרב זקס ניכרת בניסיון המתמיד לגשר בין המסורת למודרנה, בחשיבות הקהילה, ובחתירה למצוא משמעות יהודית עמוקה לאתגרי הזמן.
-        </div>
-      </div>
-
-      <!-- ===== הרבי מלובביץ' ===== -->
-      <div class="vbt-acc">
-        <input class="vbt-toggle" type="checkbox" id="vbt-t2" />
-        <label class="vbt-summary" for="vbt-t2" role="button" tabindex="0">
           <span class="vbt-icon">i</span>
           <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">הרבי מלובביץ'</span>
         </label>
@@ -86,36 +57,61 @@
         </div>
       </div>
 
+      <!-- ===== הרב סולובייצ'יק ===== -->
+      <div class="vbt-acc">
+        <input class="vbt-toggle" type="checkbox" id="vbt-t2" />
+        <label class="vbt-summary" for="vbt-t2" role="button" tabindex="0">
+          <span class="vbt-icon">i</span>
+          <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">הרב סולובייצ'יק</span>
+        </label>
+        <div class="vbt-panel">
+          הרב יוסף דב סולובייצ'יק היה מההוגים היהודיים המשפיעים ביותר במאה העשרים, יצר סינתזה ייחודית בין המסורת היהודית לפילוסופיה המערבית. הוא פיתח את דמות "איש ההלכה" המשלבת בין עולם המסורת לעולם המודרני, וטבע את המושג "קהילת הברית" המדגיש את האחריות ההדדית בקהילה היהודית. השפעתו על הרב זקס ניכרת בניסיון המתמיד לגשר בין המסורת למודרנה, בחשיבות הקהילה, ובחתירה למצוא משמעות יהודית עמוקה לאתגרי הזמן.
+        </div>
+      </div>
+
     </div>
   </div>
 
-  <!-- Auto‑Resize: שליחת גובה להורה (Moodle) כדי למנוע גלילה פנימית ב-iframe -->
+  <!-- Robust Auto‑Resize: יבטיח שגם בסגירה הגובה יקטן -->
   <script>
   (function () {
-    function sendHeight() {
-      var h = Math.max(
-        document.documentElement.scrollHeight,
-        document.body.scrollHeight,
-        document.documentElement.offsetHeight,
-        document.body.offsetHeight
-      );
-      parent.postMessage({ type: 'termsHeight', height: h }, '*');
+    function computeHeight(){
+      var b = document.body, d = document.documentElement;
+      return Math.max(d.scrollHeight, b.scrollHeight, d.offsetHeight, b.offsetHeight, d.clientHeight, b.clientHeight);
     }
+    function sendHeight(){ parent.postMessage({ type: 'termsHeight', height: Math.ceil(computeHeight()) }, '*'); }
 
+    // ResizeObserver על שורש המסמך והרכיבים העיקריים
     if ('ResizeObserver' in window) {
-      var ro = new ResizeObserver(sendHeight);
+      var ro = new ResizeObserver(function(){ requestAnimationFrame(sendHeight); });
       ro.observe(document.documentElement);
       ro.observe(document.body);
-      var root = document.querySelector('.vbt-terms');
-      if (root) ro.observe(root);
+      var root = document.querySelector('.vbt-terms'); if (root) ro.observe(root);
+      var grid = document.querySelector('.vbt-grid'); if (grid) ro.observe(grid);
+      document.querySelectorAll('.vbt-panel, .vbt-summary').forEach(function(el){ ro.observe(el); });
     }
 
-    var fire = function(){ requestAnimationFrame(sendHeight); };
-    window.addEventListener('DOMContentLoaded', fire);
-    window.addEventListener('load', fire);
-    window.addEventListener('transitionend', fire, true);
-    window.addEventListener('click', function(){ setTimeout(sendHeight, 200); }, true);
-    setInterval(sendHeight, 800);
+    // MutationObserver – לכיסוי שינויי מצב ה-checkbox וה-DOM
+    if ('MutationObserver' in window) {
+      var mo = new MutationObserver(function(){ setTimeout(sendHeight, 60); });
+      mo.observe(document.documentElement, { attributes:true, childList:true, subtree:true });
+    }
+
+    // אירועי עזר – לפני/אחרי טרנזישן והקלקות
+    function tick(){ requestAnimationFrame(sendHeight); }
+    window.addEventListener('DOMContentLoaded', tick);
+    window.addEventListener('load', tick);
+    window.addEventListener('transitionrun', function(){ setTimeout(sendHeight, 0); }, true);
+    window.addEventListener('transitionend', function(){ setTimeout(sendHeight, 80); }, true);
+    window.addEventListener('change', function(e){ if (e.target && e.target.classList && e.target.classList.contains('vbt-toggle')) setTimeout(sendHeight, 80); }, true);
+    window.addEventListener('click', function(){ setTimeout(sendHeight, 120); }, true);
+
+    // פולבק מחזורי עדין
+    var hb = setInterval(sendHeight, 1500);
+    window.addEventListener('pagehide', function(){ clearInterval(hb); });
+
+    // פתיחה
+    sendHeight();
   })();
   </script>
 </body>
